--- a/client/dataSelectorWidget.html
+++ b/client/dataSelectorWidget.html
@@ -292,14 +292,15 @@ neon.helpers = {
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
-        <script src="components/lineChart/lineChart.directive.js"></script>
+        <script src="components/layerOptions/layerOptions.directive.js"></script>
+        <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
         <script src="components/linksPopup/linksPopupButton.directive.js"></script>
         <script src="components/map/coremap.js"></script>
         <script src="components/map/heatmapLayer.js"></script>
-        <script src="components/map/map.directive.js"></script>
+        <script src="components/map/map.controller.js"></script>
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
@@ -314,7 +315,6 @@ neon.helpers = {
         <script src="components/sample/sample.controller.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
         <script src="components/scatterPlot/scatterPlot.controller.js"></script>
-        <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.controller.js"></script>
         <script src="components/textCloud/textCloud.controller.js"></script>
@@ -326,7 +326,12 @@ neon.helpers = {
         <script src="components/translationOptions/translationOptions.directive.js"></script>
         <script src="components/visualization/visualizationDisplay.directive.js"></script>
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
+        <script src="components/visualization/visualizationLayerOptions.directive.js"></script>
         <script src="components/visualization/visualizationOptions.directive.js"></script>
+        <script src="components/visualizationSuperclass/multipleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/singleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.directive.js"></script>
         <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
