--- a/client/linechartWidget.html
+++ b/client/linechartWidget.html
@@ -42,7 +42,7 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div multiple-table-visualization name="Line Chart" type="lineChart" class="multiple-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="linechart" visualization-id="{{visualizationId}}"></div>
+            <div visualization-superclass implementation="multipleLayer" name="Line Chart" type="lineChart" class="multiple-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="linechart" visualization-id="{{visualizationId}}" state-id={{visualizationId}}></div>
         </div>
         <div id="tooltip-container"></div>
         <!-- In production use:
@@ -333,7 +333,6 @@
             }]);
 
         </script>
-        <!-- <script src="app/main/main.controller.js"></script> -->
         <script src="components/addVisualization/addVisualization.directive.js"></script>
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.controller.js"></script>
@@ -355,6 +354,7 @@
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
+        <script src="components/layerOptions/layerOptions.directive.js"></script>
         <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
@@ -366,7 +366,6 @@
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
-        <script src="components/multipleTableVisualization/multipleTableVisualization.directive.js"></script>
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
         <script src="components/networkGraph/networkGraph.controller.js"></script>
@@ -378,7 +377,6 @@
         <script src="components/sample/sample.controller.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
         <script src="components/scatterPlot/scatterPlot.controller.js"></script>
-        <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.controller.js"></script>
         <script src="components/textCloud/textCloud.controller.js"></script>
@@ -392,6 +390,11 @@
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
         <script src="components/visualization/visualizationLayerOptions.directive.js"></script>
         <script src="components/visualization/visualizationOptions.directive.js"></script>
+        <script src="components/visualizationSuperclass/multipleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/singleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.directive.js"></script>
+        <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
