--- a/client/mapWidget.html
+++ b/client/mapWidget.html
@@ -42,7 +42,7 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div multiple-table-visualization name="Map" type="map" class="multiple-table-visualization" active="active" bindings="bindings" log-element-group="map_group" log-element-type="map" visualization-id="{{visualizationId}}"></div>
+            <div visualization-superclass implementation="multipleLayer" name="Map" type="map" class="multiple-table-visualization" active="active" bindings="bindings" log-element-group="map_group" log-element-type="map" visualization-id="{{visualizationId}}" state-id="{{visualizationId}}"></div>
         </div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -322,7 +322,6 @@
             }]);
 
         </script>
-        <!-- <script src="app/main/main.controller.js"></script> -->
         <script src="components/addVisualization/addVisualization.directive.js"></script>
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.controller.js"></script>
@@ -344,7 +343,8 @@
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
-       <!--  <script src="components/lineChart/lineChart.controller.js"></script> -->
+        <script src="components/layerOptions/layerOptions.directive.js"></script>
+        <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
@@ -355,7 +355,6 @@
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
-        <script src="components/multipleTableVisualization/multipleTableVisualization.directive.js"></script>
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
         <script src="components/networkGraph/networkGraph.controller.js"></script>
@@ -367,7 +366,6 @@
         <script src="components/sample/sample.controller.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
         <script src="components/scatterPlot/scatterPlot.controller.js"></script>
-        <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.controller.js"></script>
         <script src="components/textCloud/textCloud.controller.js"></script>
@@ -381,6 +379,10 @@
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
         <script src="components/visualization/visualizationLayerOptions.directive.js"></script>
         <script src="components/visualization/visualizationOptions.directive.js"></script>
+        <script src="components/visualizationSuperclass/multipleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/singleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.directive.js"></script>
         <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
