--- a/client/opsClockWidget.html
+++ b/client/opsClockWidget.html
@@ -42,7 +42,7 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div single-table-visualization name="Ops Clock" type="opsClock" class="single-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="opsclock" visualization-id="{{visualizationId}}"></div>
+            <div visualization-superclass implementation="singleLayer" name="Ops Clock" type="opsClock" class="single-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="opsclock" visualization-id="{{visualizationId}}" state-id="{{visualizationdId}}"></div>
         </div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -323,7 +323,6 @@
             }]);
 
         </script>
-        <!-- <script src="app/main/main.controller.js"></script> -->
         <script src="components/addVisualization/addVisualization.directive.js"></script>
         <script src="components/aggregationTable/aggregationTable.controller.js"></script>
         <script src="components/barChart/barChart.controller.js"></script>
@@ -345,6 +344,7 @@
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
+        <script src="components/layerOptions/layerOptions.directive.js"></script>
         <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
@@ -367,7 +367,6 @@
         <script src="components/sample/sample.controller.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
         <script src="components/scatterPlot/scatterPlot.controller.js"></script>
-        <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
         <script src="components/sunburstChart/sunburst.js"></script>
         <script src="components/sunburstChart/sunburstChart.controller.js"></script>
         <script src="components/textCloud/textCloud.controller.js"></script>
@@ -379,7 +378,12 @@
         <script src="components/translationOptions/translationOptions.directive.js"></script>
         <script src="components/visualization/visualizationDisplay.directive.js"></script>
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
+        <script src="components/visualization/visualizationLayerOptions.directive.js"></script>
         <script src="components/visualization/visualizationOptions.directive.js"></script>
+        <script src="components/visualizationSuperclass/multipleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/singleLayer.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.controller.js"></script>
+        <script src="components/visualizationSuperclass/visualizationSuperclass.directive.js"></script>
         <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
